# pytestAutoTest

./: README.md  conftest.py  main.py  pyproject.toml  pytest.ini  run_test.py  test1.py  test_cases.xlsx  ~$test_cases.xlsx  数据库类型：仅 MySQL.txt
config/: database.yml
testcases/: test_api.py
utils/: __init__.py  assertion.py  context.py  db_client.py  excel_reader.py  extractor.py  http_client.py
